--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "@calumk/editorjs-codeflask",
+  "name": "@nhatpham0709/editorjs-codeflask",
   "description": "Codeflask, for EditorJS",
-  "version": "1.0.9",
-
-  "author": "Calum Knott",
-  "repository": "https://github.com/calumk/editorjs-codeflask",
+  "version": "1.0.10",
+  "author": "Nhat Pham",
+  "repository": "https://github.com/nhatpham0709/editorjs-codeflask",
   "license": "MIT",
-
   "main": "./dist/editorjs-codeflask.bundle.js",
   "scripts": {
     "build": "webpack --mode production"
   },
-
   "dependencies": {
-    "codeflask": "^1.4.1",
-    "nice-select2": "^2.0.0",
-    "prismjs-components-importer": "^0.1.0"
+    "apix-codeflask": "^1.4.1",
+    "nice-select2": "^2.0.0"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
